--- a/views/listTasks.html
+++ b/views/listTasks.html
@@ -11,6 +11,9 @@
     </h1>
     </br>
     <h3>
+            <a href="addNewTask.html">add new task</a>
+            <a href="index.html">Homepage</a></br>
+            
         <table>
             <tr>
                 
