--- a/views/addNewTask.html
+++ b/views/addNewTask.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-    <h3><a href="listTasks.html">List all tasks</a>
-        <a href="index.html">Homepage</a>
+    <h3><a href="/listTasks">List all tasks</a>
+        <a href="/index">Homepage</a>
     </h3>
     <form action="/newTask" method="POST">
         <label>Task name</label>
