--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     </br>
     <h3>
              <a href="addNewTask.html">Add a new task</a></br>
-             <a href="/listTasks">List all tasks</a>
+             <a href="listTasks.html">List all tasks</a>
           
     </h3>
 </body>
