--- a/views/addNewTask.html
+++ b/views/addNewTask.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+    <link rel="stylesheet" href="styles.css">
     <h3><a href="/listTasks">List all tasks</a>
         <a href="/index">Homepage</a>
     </h3>
